Added missing colons to `pywal-discord-default.css`

--- a/config/pywal-discord-default.css
+++ b/config/pywal-discord-default.css
@@ -59,7 +59,7 @@ html.newBrand {
 
 .theme-dark {
   --brand-experiment: var(--color1);
-  --text-positive var(--color2);
+  --text-positive: var(--color2);
   --header-primary: var(--foreground);
   --header-secondary: var(--color7);
   --text-normal: var(--color7);
@@ -128,7 +128,7 @@ html.newBrand {
 
 .theme-light {
   --brand-experiment: var(--color1);
-  --text-positive var(--color2);
+  --text-positive: var(--color2);
   --header-primary: var(--color8);
   --header-secondary: var(--background);
   --text-normal: var(--background);
